tests/ui/mismatched_types/issue-13033.stderr
error[E0053]: method `bar` has an incompatible type for trait
  --> $DIR/issue-13033.rs:10:30
   |
LL |     fn bar(&mut self, other: &dyn Foo) {}
   |                              ^^^^^^^^ types differ in mutability
   |
note: type in trait
  --> $DIR/issue-13033.rs:4:30
   |
LL |     fn bar(&mut self, other: &mut dyn Foo);
   |                              ^^^^^^^^^^^^
   = note: expected signature `fn(&mut Baz, &mut dyn Foo)`
              found signature `fn(&mut Baz, &dyn Foo)`
help: change the parameter type to match the trait
   |
LL |     fn bar(&mut self, other: &mut dyn Foo) {}
   |                               +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0053`.
